--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "install": "pod install",
     "x": "open mga.xcworkspace"
   },
   "repository": {
